--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="images/KLD.jpg" alt="Kellyn Profile Pic">
+  <img src="KLD.jpg" alt="Kellyn Profile Pic">
   <h1>Kellyn Davies</h1>
   <p><em>Personal website and <strong>CV</strong></em></p>
   <br>
